blackroad-sf/force-app/main/default/objects/AgentTask__c/AgentTask__c.object-meta.xml
<CustomObject>
    <label>Agent Task</label>
    <pluralLabel>Agent Tasks</pluralLabel>
    <nameField>
        <label>Task Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Task queue for BlackRoad OS agents. Replaces SQLite agent-tasks.db — free on SF Developer Edition.</description>
</CustomObject>