blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <label>Assigned To</label>
    <type>Text</type>
        <length>100</length>
    
</CustomField>