blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/ChainTo__c.field-meta.xml
<CustomField>
    <fullName>ChainTo__c</fullName>
    <label>Chain To Task</label>
    <type>Text</type>
        <length>100</length>
    
</CustomField>