blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/ClaimedAt__c.field-meta.xml
<CustomField>
    <fullName>ClaimedAt__c</fullName>
    <label>Claimed At</label>
    <type>DateTime</type>
    
</CustomField>