blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/CompletedAt__c.field-meta.xml
<CustomField>
    <fullName>CompletedAt__c</fullName>
    <label>Completed At</label>
    <type>DateTime</type>
    
</CustomField>