blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
        <length>32768</length>
    
</CustomField>