blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model Used</label>
    <type>Text</type>
        <length>100</length>
    
</CustomField>