blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>critical</fullName>
                <default>true</default>
                <label>critical</label>
            </value>
            <value>
                <fullName>high</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>low</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>