blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>LongTextArea</type>
        <length>32768</length>
    
</CustomField>