blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/TargetOrg__c.field-meta.xml
<CustomField>
    <fullName>TargetOrg__c</fullName>
    <label>Target Org</label>
    <type>Text</type>
        <length>100</length>
    
</CustomField>