blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/TargetRepo__c.field-meta.xml
<CustomField>
    <fullName>TargetRepo__c</fullName>
    <label>Target Repo</label>
    <type>Text</type>
        <length>200</length>
    
</CustomField>