blackroad-sf/force-app/main/default/objects/AgentTask__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <label>Task ID</label>
    <type>Text</type>
        <length>100</length>
    <required>true</required>
    
</CustomField>